script/test/error/wrong-syntax.jly
false
qn
\newline \'   [-444  4 \n  [-0.33 fun "a"
\m (  "ggg\\33\33") \space]    #vec"dd" (ttt 4.5)]
